--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script src="ts/suggestion.js"></script>
 </head>
-<body>
+<body style="width: 2000px;height: 2000px;">
 <input type="text" id="tag" />
 
 </body>
@@ -25,6 +25,6 @@
         "开发插件":["Emmet","MyEclipse"]
     };
 
-//    tag_sug.updateData(new_data);
+    tag_sug.updateData(new_data);
 </script>
 </html>
