--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body style="width: 2000px;height: 2000px;">
 <input type="text" id="tag" />
-
+<style>
+    input{
+        left: 1000px;
+        top: 360px;
+        display: block;
+        position: absolute;
+    }
+</style>
 </body>
 <script>
     var ele = document.getElementById("tag");
