--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     var ele1 = document.getElementsByTagName("input")[0];
     var ele2 = document.getElementsByTagName("input")[1];
     var tag_sug = new TagSuggestion();
-    tag_sug.addBindingElement(ele1);
+    tag_sug.addBindingElement(ele1,function (e) {
+        console.log("hello ele1");
+    });
     tag_sug.addBindingElement(ele2);
 
     var new_data = {
