--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="sass/style.css"/>
 </head>
 <body style="width: 2000px;height: 2000px;">
-<input type="text" id="tag" />
+<input type="text" id="tag" placeholder="1" />
 <div style="width: 800px; height: 500px;background-color: #0088cc; opacity: .3; left: 500px; top: 100px; position:absolute;">
-    <input type="text" />
+    <input type="text" placeholder="2" />
 </div>
 
 <style>
@@ -29,6 +29,7 @@
         console.log("hello ele1");
     });
     TagSuggestion.ME.addBindingElement(ele2);
+    TagSuggestion.ME.removeBindingElement(ele1);
 
     var new_data = {
         "编程语言":[],
@@ -40,5 +41,6 @@
     };
 
     TagSuggestion.ME.updateData(new_data);
+
 </script>
 </html>
